--- a/protos/top_rank_lightgbm.ipynb
+++ b/protos/top_rank_lightgbm.ipynb
@@ -248,70 +248,6 @@
    "id": "10",
    "metadata": {},
    "source": [
-    "## 5. High Missing Columns Pruning\n",
-    "Drop highly sparse fields while keeping their missingness indicators for signal preservation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "HIGH_MISSING_THRESHOLD = 0.85\n",
-    "\n",
-    "high_missing_cols = [\n",
-    "    col\n",
-    "    for col, ratios in missing_summary.iterrows()\n",
-    "    if ratios[\"train_missing_ratio\"] >= HIGH_MISSING_THRESHOLD\n",
-    "    and col not in {TARGET_COL}\n",
-    "]\n",
-    "\n",
-    "train_work.drop(columns=[col for col in high_missing_cols if col in train_work.columns], inplace=True)\n",
-    "test_work.drop(columns=[col for col in high_missing_cols if col in test_work.columns], inplace=True)\n",
-    "\n",
-    "print(f\"Dropped {len(high_missing_cols)} sparse columns: {high_missing_cols}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "12",
-   "metadata": {},
-   "source": [
-    "## 6. Outlier Detection & Removal\n",
-    "Remove extreme target values using log-scale quantile clipping to stabilize training."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def trim_outliers_log(df: pd.DataFrame, target_col: str, lower_quantile: float = 0.005, upper_quantile: float = 0.995) -> pd.DataFrame:\n",
-    "    \"\"\"Remove rows with extreme targets on the log scale.\"\"\"\n",
-    "    log_target = np.log1p(df[target_col])\n",
-    "    low, high = log_target.quantile([lower_quantile, upper_quantile])\n",
-    "    mask = log_target.between(low, high)\n",
-    "    trimmed = df.loc[mask].copy()\n",
-    "    print(\n",
-    "        f\"Outlier trimming retained {mask.sum()} of {len(mask)} rows \"\n",
-    "        f\"({mask.sum() / len(mask):.2%}).\"\n",
-    "    )\n",
-    "    return trimmed\n",
-    "\n",
-    "\n",
-    "train_filtered = trim_outliers_log(train_work, TARGET_COL)\n",
-    "print(\"Filtered train shape:\", train_filtered.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "14",
-   "metadata": {},
-   "source": [
     "## 7. Feature Engineering: DistrictName × BuildingYear Aggregations\n",
     "Capture localized pricing signals with smoothed mean/median targets by district and construction year."
    ]
@@ -319,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "12",
    "metadata": {},
    "source": [
     "## 8. Categorical Encoding & Label Preparation\n",
@@ -363,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +326,7 @@
     "    return df\n",
     "\n",
     "\n",
-    "train_filtered = add_domain_features(train_filtered)\n",
+    "train_filtered = add_domain_features(train_work)\n",
     "test_work = add_domain_features(test_work)\n",
     "\n",
     "fill_numeric_with_median(train_filtered, test_work)\n",
@@ -412,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "14",
    "metadata": {},
    "source": [
     "## 9. Segment Datasets by Property Type\n",
@@ -422,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "16",
    "metadata": {},
    "source": [
     "## 10. LightGBM Monotonic Constraint Definitions\n",
@@ -456,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "18",
    "metadata": {},
    "source": [
     "## 11. K-Fold Cross-Validation Workflow\n",
@@ -487,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "20",
    "metadata": {},
    "source": [
     "## 12. Train Segment Models on Full Data\n",
@@ -629,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "22",
    "metadata": {},
    "source": [
     "## 13. Inference on Test Segments & Blending\n",
@@ -693,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "24",
    "metadata": {},
    "source": [
     "## 14. Create Submission File\n",
@@ -715,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "27",
    "metadata": {},
    "source": [
     "## 15. Model Comparison & Diagnostics\n",
@@ -760,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "29",
    "metadata": {},
    "source": [
     "### Experiment Notes\n",
@@ -809,7 +745,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34",
+   "id": "30",
    "metadata": {},
    "source": [
     "## 16. Data Leakage Fix Validation\n",
@@ -819,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
